@@ -30,7 +30,7 @@ def create_database():
     print 'creating database'
     db = sqlite3.connect('images.sqlite')
     db.execute('CREATE TABLE image_store (i INTEGER PRIMARY KEY, filename VARCHAR(255), \
-        score INTEGER, image BLOB)');
+        score INTEGER, image BLOB, description TEXT)');
     db.execute('CREATE TABLE image_comments (i INTEGER PRIMARY KEY, imageId INTEGER, \
      comment TEXT, FOREIGN KEY (imageId) REFERENCES image_store(i))');
     db.commit()
