@@ -7,8 +7,9 @@ Upload an image (jpg, png, or tif)
 
 <form enctype='multipart/form-data' action='upload_receive' method='POST'>
 Filename: <input type='file' name='file'><p>
+Description: <input type='text' name='description'><p>
 <input type='submit'><br>
-<a href="/">Return to Home Page</a>
+<a href="/" >Return to Home Page</a>
 </form>
 
 </div>
