@@ -6,6 +6,7 @@ Upload an image (jpg, png, or tif) (other version):
 
 <form id='form' enctype='multipart/form-data' action='upload_receive' method='POST'>
 Filename: <input type='file' name='file'><p>
+Description: <input type='text' name='description'><p>
 <input type='submit'><br>
 </form>
 <a href="/" >Return to Home Page</a>
